:wrench: Fix sizing of travel cards on mobile

--- a/src/travel/videolibrary.module.scss
+++ b/src/travel/videolibrary.module.scss
@@ -1,6 +1,14 @@
 @import "../../themes/colors.module";
 @import "../../themes/breakpoints";
 
+.gridContainer {
+	justify-content: space-evenly;
+
+	@include breakpoint(medium) {
+		justify-content: left;
+	}
+}
+
 .headingDash {
 	width: 80%;
 }
